--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <script src="js/carousel.js"></script>
         <script type="text/javascript">
             function googleTranslateElementInit() {
-                new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en,es'}, 'google_translate_element');
+                new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en,es,pt'}, 'google_translate_element');
             }
         </script>
         <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
