--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
                     <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
                     <div class="line"><h3 class="title">IDIOMA</h3></div>
-                    <div id="google_translate_element"></div>
+                    <div class="content"><div id="google_translate_element"></div></div>
                     <div class="line"><h3 class="title">PESQUISA</h3></div>
                     <div class="content">
                         <input type="search" placeholder="Search" id="serch">
