--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                             <li><a href="">ASSISTIR</a></li>
                             <li><a href="">GALERIA</a></li>
                             <li><a href="">SOBRE</a></li>
+                            <input type="search" placeholder="Search" id="sch">
                         </ul>
                     </nav>
                 </header>
@@ -34,6 +35,12 @@
                     </div>
                 </div>
                 <div class="col1">
+                    <div class="tablet">
+                        <div class="content"><div id="google_translate_element"></div></div>
+                        <a href="https://www.facebook.com/" target="_blank" title="Facebook"><img src="css/img/icon-fb.png" id="icon" alt="facebook"></a>
+                        <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
+                        <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
+                    </div>
                     <figure>
                         <span class="trs next" id="trs"></span>
                         <span class="trs prev" id="trs"></span>
@@ -54,7 +61,7 @@
             function googleTranslateElementInit() {
               new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en,es,pt', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
             }
-        </script>
+        </script> -->
         <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </body>
 </html>
