--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
                     <div class="line"><h3 class="title">IDIOMA</h3></div>
                     <div class="content"><div id="google_translate_element"></div></div>
                     <div class="line"><h3 class="title">PESQUISA</h3></div>
-                    <div class="content">
-                        <input type="search" placeholder="Search" id="serch">
-                    </div>
+                    <div class="content"><input type="search" placeholder="Search" id="serch"></div>
                 </div>
                 <div class="col1">
                     <div class="tablet">
-                        <div class="content"><div id="google_translate_element"></div></div>
+                        <div class="content"><div class="trd" id="google_translate_element"></div></div>
                         <a href="https://www.facebook.com/" target="_blank" title="Facebook"><img src="css/img/icon-fb.png" id="icon" alt="facebook"></a>
                         <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
                         <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
