--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col1">
                     <div class="tablet">
-                        <div class="content"><div class="trd" id="google_translate_element"></div></div>
+                        <div class="trd" id="google_translate_element">Texto</div>
                         <a href="https://www.facebook.com/" target="_blank" title="Facebook"><img src="css/img/icon-fb.png" id="icon" alt="facebook"></a>
                         <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
                         <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
