--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
                     <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
                     <div class="line"><h3 class="title">IDIOMA</h3></div>
-                    <div class="content"><div id="google_translate_element"></div></div>
+                    <div class="content"><div id="google_translate"></div></div>
                     <div class="line"><h3 class="title">PESQUISA</h3></div>
                     <div class="content"><input type="search" placeholder="Search" id="serch"></div>
                 </div>
@@ -57,9 +57,13 @@
         <script src="js/carousel.js"></script>
         <script type="text/javascript">
             function googleTranslateElementInit() {
+              new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en,es,pt', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate');
+            }
+            function googleTranslateElementInit2() {
               new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en,es,pt', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
             }
         </script>
         <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
     </body>
 </html>
