--- a/index.html
+++ b/index.html
@@ -1,81 +1,116 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-        <title>Toka</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/carousel.css">
-    </head>
-    <body>
-        <div class="desktop">
-            <div class="main-desktop">
-                <header>
-                    <nav>
-                        <ul class="list">
-                            <li id="active"><a href="index.html">PÁGINA INICIAL</a></li>
-                            <li><a href="">ANIMES</a></li>
-                            <li><a href="">MEUS ANIMES</a></li>
-                            <li><a href="">ASSISTIR</a></li>
-                            <li><a href="">GALERIA</a></li>
-                            <li><a href="">SOBRE</a></li>
-                            <input type="search" placeholder="Search" id="sch">
-                        </ul>
-                    </nav>
-                </header>
-                <nav class="mobile" id="mb">
-                    <div class="searchLine"><input type="search" placeholder="Search"></div>
-                    <button class="more close">x</button>
-                    <ul id="list-mobile">
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="animes.html">Animes</a></li>
-                        <li><a href="my.html">My Animes</a></li>
-                        <li><a href="watch.html">Watch</a></li>
-                        <li><a href="personal.html">Personal</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="about.html">About</a></li>
-                    </ul>
-                    <div class="share">
-                        <a target="blank" href="https://www.facebook.com/" class="facebook"></a>
-                        <a target="blank" href="https://twitter.com/" class="twitter"></a>
-                        <a target="blank" href="https://github.com/" class="github"></a>
-                    </div>
-                </nav>
-                <div class="hamburger">
-                    <label for="check"></label>
-                    <input type="checkbox" id="check">
-                    <span></span>
-                </div>
-                <input type="search" placeholder="Search" id="schh">
-                <div class="col2">
-                    <a href="https://www.facebook.com/" target="_blank" title="Facebook"><img src="css/img/icon-fb.png" id="icon" alt="facebook"></a>
-                    <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
-                    <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
-                    <div class="line"><h3 class="title">PESQUISA</h3></div>
-                    <div class="content"><input type="search" placeholder="Search" id="serch"></div>
-                </div>
-                <div class="col1">
-                    <div class="tablet">
-                        <a href="https://www.facebook.com/" target="_blank" title="Facebook"><img src="css/img/icon-fb.png" id="icon" alt="facebook"></a>
-                        <a href="https://www.facebook.com/" target="_blank" title="Twitter"><img src="css/img/icon-twitter.png" id="icon" alt="twitter"></a>
-                        <a href="https://www.facebook.com/" target="_blank" title="Google +"><img src="css/img/icon-google.png" id="icon" alt="google+"></a>
-                    </div>
-                    <figure>
-                        <span class="trs next" id="trs"></span>
-                        <span class="trs prev" id="trs"></span>
-                        <div id="slider">
-                            <a href="#" class="trs" id="ca1"><img src="css/img/n1.png" alt="Violet Evergarden"/></a>
-                            <a href="#" class="trs" id="ca2"><img src="css/img/n2.png" alt="Nanatsu no Taizai 2"/></a>
-                            <a href="#" class="trs"><img src="css/img/n3.png" id="ca3" alt="Grancrest Senki"/></a>
-                        </div>
-                        <figcaption></figcaption>
-                    </figure>
-                    <h3 class="title" id="title">Of the season</h3>
-                    <i>A guide with the new animes of the season.</i>
-                </div>
-            </div>
+<html>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Yoq</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <div id="top"><h2>Yoq</h2><h4>Suas entregas em qualquer lugar,a qualquer momento</h4></div>
+    <div class="container">
+        <div id="BoxForm">
+            <form name="formulario" id="formulario">
+                <ul>                      
+                    <li>
+                        <label>Localização do produto(A):</label>
+                        <input id="start" type="text" class="campos01" required="required"/>
+                    </li>
+                    <li>
+                        <label>Entrega(B):</label><button type="button" id="location">Usar localização</button>
+                        <input id="end" type="text" class="campos01" required="required"/>
+                        <p id="fail">Falha ao obter sua localização</p>
+                    </li>
+                    <li><button id="enviar">Ver rota</button></li>
+                </ul>
+            </form>
         </div>
-        <script src="js/index.js"></script>
-        <script src="js/carousel.js"></script>
-    </body>
+        <div id="map"></div>
+    </div>
+    <script>
+        var btn = document.querySelector('#enviar');
+        document.querySelector('#location').addEventListener('click', function () {
+            if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function (position) {
+                    document.getElementById('end').value = position.coords.latitude+','+ position.coords.longitude;
+                }, function () {
+                    document.querySelector('#fail').style.display = 'block';
+                    setInterval(myFunction, 1000);
+                });
+            }
+        });
+        btn.addEventListener('click', function (e) {
+            e.preventDefault();
+            var directionsService = new google.maps.DirectionsService;
+            var directionsDisplay = new google.maps.DirectionsRenderer;
+            var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 7,
+                    center: {lat: -32.05, lng: -52.11}
+            });
+            directionsDisplay.setMap(map);
+            directionsService.route({
+                origin: document.getElementById('start').value,
+                destination: document.getElementById('end').value,
+                travelMode: 'DRIVING'
+            }, function(response, status) {
+                    if (status === 'OK') {
+                        directionsDisplay.setDirections(response);
+                    } else {
+                        window.alert('Directions request failed due to ' + status);
+                    }
+            });
+            var myLatlng = new google.maps.LatLng(-32.050083, -52.116817);
+            var marker = new google.maps.Marker({
+                    position: myLatlng,
+                    name : 'Avenida Presidente Vargas',
+                    morada1 : 'Rio Grande',
+                    morada2: 'RS'
+            });
+            var iwContent = '<div><h2>Correio</h2>' + '<div>' + marker.name + '</div>' + '<div>' + marker.morada1 + ' - ' + marker.morada2 + '<br /> </div></div>';
+
+            var infowindow = new google.maps.InfoWindow({
+                    content: iwContent
+            });
+            marker.addListener('click', function() {
+                    infowindow.open(map, marker);
+            });
+            marker.setMap(map);
+        });
+        function myFunction () {document.querySelector('#fail').style.display = 'none';}
+        function initMap() {
+            var directionsService = new google.maps.DirectionsService;
+            var directionsDisplay = new google.maps.DirectionsRenderer;
+            var myLatlng = new google.maps.LatLng(-32.050083, -52.116817);
+            var mapOptions = {
+                    zoom: 15,
+                    center: myLatlng
+            }
+            var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+            var marker = new google.maps.Marker({
+                    position: myLatlng,
+                    name : 'Avenida Presidente Vargas',
+                    morada1 : 'Rio Grande',
+                    morada2: 'RS'
+            });
+            var iwContent = '<div><h2>Correio</h2>' + '<div>' + marker.name + '</div>' + '<div>' + marker.morada1 + ' - ' + marker.morada2 + '<br /> </div></div>';
+
+            var infowindow = new google.maps.InfoWindow({
+                    content: iwContent
+            });
+            marker.addListener('click', function() {
+                    infowindow.open(map, marker);
+            });
+            marker.setMap(map);
+        }
+        if (navigator.serviceWorker.controller) {
+        } else {
+          navigator.serviceWorker.register('sw.js', {
+            scope: './'
+          })
+        }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCw37gSoAYvkUQUPCq2XTFFeUQ-x-iMFyU&callback=initMap"></script>
+  </body>
 </html>
