--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <div class="searchLine"><input type="search" placeholder="Search"></div>
                     <button class="more close">x</button>
                     <ul id="list-mobile">
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="animes.html">Animes</a></li>
-                        <li><a href="my.html">My Animes</a></li>
-                        <li><a href="watch.html">Watch</a></li>
-                        <li><a href="personal.html">Personal</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="#" class="active">HOME</a></li>
+                        <li><a href="animes.html">ANIMES</a></li>
+                        <li><a href="my.html">MY ANIMES</a></li>
+                        <li><a href="watch.html">WATCH</a></li>
+                        <li><a href="personal.html">PERSONAL</a></li>
+                        <li><a href="gallery.html">GALLERY</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                     </ul>
                     <div class="share">
                         <a target="blank" href="https://www.facebook.com/" class="facebook"></a>
